# rust-neural-net-experiments

./: .gitignore  Cargo.toml  README.md
.github/workflows/: dev.yml
common/: .rustfmt.toml  Cargo.toml
common/src/: lib.rs  matrix.rs  old_matrix.rs  point.rs  scalar_valued_multivariable_point.rs  sigmoid.rs  softmax.rs
common/src/activation_functions/: relu.rs  sigmoid.rs
common/src/datapoints/: mod.rs
common/src/linalg/: mod.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
mnist-data/: Cargo.toml
mnist-data/src/: lib.rs
test1-autodiff/: Cargo.toml
test1-autodiff/src/: main.rs
test2-mlp-classifier/: Cargo.toml
test2-mlp-classifier/src/: main.rs
test3-simple-linear-regression/: Cargo.toml
test3-simple-linear-regression/src/: main.rs
test4-multivariable-regression/: Cargo.toml
test4-multivariable-regression/src/: main.rs
test5-playing-with-matrix-ideas/: Cargo.toml
test5-playing-with-matrix-ideas/src/: main.rs
test6-nn/: Cargo.toml
test6-nn/src/: big_theta.rs  builder.rs  cost.rs  errors.rs  initializer.rs  layer_config.rs  layer_info.rs  lib.rs  main.rs  optimizer.rs  training_log.rs
test6-nn/src/activation/: elu.rs  jelu.rs  leaky_relu.rs  mod.rs  relu.rs
test6-nn/src/activation/activator/: elu.rs  jelu.rs  mod.rs  relu.rs  sigmoid.rs
test7-nn-mnist-classifier/: Cargo.toml
test7-nn-mnist-classifier/src/: builder.rs  initializer.rs  layer_config.rs  lib.rs  main.rs  training_log.rs
test7-nn-mnist-classifier/src/activation/: leaky_relu.rs  mod.rs  sigmoid.rs  softmax.rs
test7-nn-mnist-classifier/src/cost/: cross_entropy.rs  (+1 more)
