[package]
name = "test4-multivariable-regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
rand = "0.8.4"
rand_distr = "0.4.2"

[dev-dependencies]
float-cmp = "0.9.0"
