[package]
name = "test6-nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
mnist-data = { path = "../mnist-data" }
metrics = { path = "../metrics" }
rand = "0.8.4"
rand_distr = "0.4.2"
rayon = "1.5.1"
serde_json = "1.0.78"
serde = "1.0.136"
serde_derive = "1.0.136"

[dev-dependencies]
float-cmp = "0.9.0"
time-test = "0.2.2"
